# com.webos.service.mediarecorder

./: .gitignore  CMakeLists.txt  README.md  clang-format.sh  groups  project.config
bufferencoder/: CMakeLists.txt  buffer-encoder.pc.in  buffer_encoder.cpp  buffer_encoder.h  gst-video-encoder.pc.in  gst_debug.conf
com.webos.service.mediarecorder/: README.md
com.webos.service.mediarecorder/files/sysbus/: com.webos.service.mediarecorder.service.in
com.webos.service.mediarecorder/files/systemd/: com.webos.service.mediarecorder.service.in
files/sysbus/: com.webos.service.mediarecorder.api.json.in  com.webos.service.mediarecorder.perm.json.in  com.webos.service.mediarecorder.role.json.in  com.webos.service.mediarecorder.service.in
files/sysbus_new/: com.webos.service.mediarecorder.groups.json  com.webos.service.mediarecorder.role.json.in
files/systemd/: com.webos.service.mediarecorder.service.in
include/: format_utils.h  json_utils.h  log.h
pipeline/: CMakeLists.txt
pipeline/files/: CMakeLists.txt
pipeline/files/conf/: CMakeLists.txt  g-record-pipeline.conf.in
pipeline/files/sysbus/: com.webos.g-record-pipeline.api.json  com.webos.g-record-pipeline.groups.json  com.webos.g-record-pipeline.perm.json  com.webos.g-record-pipeline.role.json.in  com.webos.g-record-pipeline.service.in  com.webos.pipeline.record.api.json  com.webos.pipeline.record.groups.json  com.webos.pipeline.record.manifest.json.in  com.webos.pipeline.record.perm.json  com.webos.pipeline.record.role.json.in  com.webos.pipeline.record.service.in
pipeline/src/: CMakeLists.txt  main.cpp
pipeline/src/base/: base.h  camera_types.h  message.h
pipeline/src/log/: glog.cpp  glog.h
pipeline/src/parser/: parser.cpp  parser.h  serializer.cpp  serializer.h
pipeline/src/pipelinefactory/: element_factory.cpp  element_factory.h  pipeline_factory.cpp  pipeline_factory.h
pipeline/src/recordpipeline/: audio_record_pipeline.cpp  audio_record_pipeline.h  base_record_pipeline.cpp  base_record_pipeline.h  record_pipeline.h  snapshot_pipeline.cpp  snapshot_pipeline.h  video_record_pipeline.cpp  video_record_pipeline.h
pipeline/src/recordpipeline/qemux86/: gst_elements.conf
pipeline/src/recordpipeline/raspberrypi/: gst_debug.conf  gst_elements.conf
pipeline/src/recordpipeline/v920/: gst_elements.conf
pipeline/src/recordservice/: record_service.cpp  record_service.h
pipeline/src/resourcefacilitator/: requestor.cpp  requestor.h
pipeline/src/service/: record_pipeline_service.cpp  record_pipeline_service.h
src/: luna_client.cpp  media_recorder.cpp  media_recorder.h  media_recorder_manager.cpp  media_recorder_manager.h  media_recorder_service.cpp  media_recorder_service.h
src/error_manager/: error.cpp  error.h  error_manager.cpp  error_manager.h
src/ls_connector/: ls_connector.cpp  ls_connector.h  luna_client.h
src/process/: generate_unique_id.h  process.cpp  process.h
tests/: CMakeLists.txt
tests/com.sample.camera.test/: CMakeLists.txt  appinfo.json
tests/com.sample.camera.test/files/: CMakeLists.txt  camera_test
tests/com.sample.camera.test/files/sysbus/: com.sample.camera.test.manifest.json
tests/com.sample.camera.test/files/sysbus/perm/: com.sample.camera.test.app.json
tests/com.sample.camera.test/files/sysbus/role/: com.sample.camera.test.app.json
tests/com.sample.camera.test/src/: cam_player_app.cpp  cam_player_app.h  main.cpp
tests/com.sample.camera.test/src/client/: camera_client.cpp  camera_client.h  client.cpp  client.h  media_client.cpp  media_client.h  media_recorder_client.cpp  media_recorder_client.h
tests/com.sample.camera.test/src/opengl/: button.cpp  button.h  button_render.cpp  image.cpp  image.h  init_opengl.h  opengl_utils.cpp  opengl_utils.h  play_button.h  record_button.cpp
tests/com.sample.camera.test/src/player/: media_player.cpp  media_player.h
tests/com.sample.camera.test/src/utils/: appParm.h  file_utils.h  log_info.h
tests/com.sample.camera.test/src/wayland/: camera_window_manager.cpp  camera_window_manager.h  wayland_importer.cpp  wayland_importer.h  wayland_surface.cpp
tests/com.sample.camera.test/src/window/: wayland_exporter.cpp  wayland_exporter.h  wayland_foreign.cpp  window_manager.cpp  window_manager.h
tests/com.sample.record.test/: CMakeLists.txt  appinfo.json
tests/com.sample.record.test/files/: CMakeLists.txt  gst_debug.conf  record_test
tests/com.sample.record.test/files/sysbus/: com.sample.record.test.manifest.json
tests/com.sample.record.test/files/sysbus/perm/: com.sample.record.test.app.json
tests/com.sample.record.test/files/sysbus/role/: com.sample.record.test.app.json
tests/com.sample.record.test/src/: cam_player_app.cpp  cam_player_app.h
tests/com.sample.record.test/src/client/: camera_client.cpp  camera_client.h  client.cpp  media_recorder_client.cpp  media_recorder_client.h
tests/com.sample.record.test/src/opengl/: button.cpp  button.h  button_render.h  image.cpp  image.h  init_opengl.cpp  play_button.cpp  record_button.h
tests/com.sample.record.test/src/player/: base.h  camera_types.h  media_player.cpp
tests/com.sample.record.test/src/utils/: file_utils.cpp  image_utils.cpp  image_utils.h  log_info.h  media_state.h
tests/com.sample.record.test/src/wayland/: common.h  wayland_foreign.h
tests/com.sample.record.test/src/window/: wayland_foreign.cpp  window_manager.cpp
